2.projects/trtllm-inference/2. Setup Container/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trtllm-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '100'
spec:
  ingressClassName: alb
  rules:    
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llama3-service
                port:
                  number: 8000
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: llama3-service
                port:
                  number: 8002
          # - path: /healthz
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: llama3-service
          #       port:
          #         number: 8080
